# WayFinder-Studio

./: CMakeLists.txt  CMakeLists.txt.user.88c3c4a  CMakeLists.txt.user.bc1eb13  README.md  manifest.json.in
app/: ArtRequestDialog.qml  Article.qml  ArtistPreview.qml  ArtistStore.qml  Auth.qml  CMakeLists.txt  Codex.qml  Commission.qml  CommissionsPage.qml  E-Tile.qml  EditArt.qml  EnemyTools.qml  Footer.qml  GalleryPage.qml  I-Title.qml  InfoPopUp.qml  Main.js  Main.qml  MapPage.qml  MapPick.qml  MapTools.qml  Menu.qml  NewArt.qml  Pages.qml  StorePage.qml  StoryPage.qml  StoryPick.qml  SummaryPage.qml  Tile.qml  WFButton.qml  WayFinder-Studio.desktop.in  ftp.sh  openseed.js
app/tests/autopilot/: run
app/tests/autopilot/WayFinder-Studio/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/WayFinder/: backend.cpp  backend.h  myio.h  myio.h.V11145  qmldir
backend/tests/unit/: tst_mytype.qml
po/: wayfinder-studio.vagueentertainment.pot  wayfinder-studio.vagueentertainment_BACKUP_12712.pot  wayfinder-studio.vagueentertainment_REMOTE_12712.pot
